timestamp when subproject switched from the project page

--- a/caravel/jinja_templates/index.html
+++ b/caravel/jinja_templates/index.html
@@ -61,7 +61,7 @@
 						</div>
 					</div>
 					<div class="card-body">
-						<table id="projects-table" data-height="400" data-toggle="table" class="table-sm table-bordered mb-0">
+						<table id="projects-table" data-height="400" data-toggle="table" class="table-sm table-bordered">
 							<thead class="thead-light">
 								<tr>
 									<th data-field="name" class="text-nowrap text-center">Project name</th>
