--- a/caravel/jinja_templates/process.html
+++ b/caravel/jinja_templates/process.html
@@ -163,7 +163,7 @@
 						<div id="options" class="divider-vertical"></div>
 					</div>
 					{% if subprojects is not none %}
-					<div class="card-header">Select subproject</div>
+					<div class="card-header">Switch subproject</div>
 					<div class="card-body">
 						<select name="subprojects" class="custom-select" style="width:auto;">
 						{% for i in subprojects %}
