add column header, no padding needed for the table

--- a/caravel/jinja_templates/index.html
+++ b/caravel/jinja_templates/index.html
@@ -63,7 +63,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="card-body">
+					<div class="card-body" id="table">
 						<table id="projects-table" data-height="400" data-toggle="table" data-search="true" data-show-columns="true" class="table-sm">
 							<thead class="thead-light">
 								<tr>
@@ -73,7 +73,7 @@
 									<th class="text-nowrap text-center">Protocols</th>
                                     <th class="text-nowrap text-center">Inputs size</th>
 									<th class="text-nowrap text-center">Last modified</th>
-									<th class="text-nowrap text-center">&nbsp;</th>
+									<th class="text-nowrap text-center">Action</th>
 								</tr>
 							</thead>
 							<tbody>
