--- a/caravel/jinja_templates/index.html
+++ b/caravel/jinja_templates/index.html
@@ -34,7 +34,7 @@
 								<b>Select a project</b>
 							</div>
 							<div class="col-9">
-								<a href="/add" class="btn btn-outline-dark btn-sm mr-2 pull-right" role="button" aria-disabled="false">
+								<a href="{{ url_for('add', metadata=True) }}" class="btn btn-outline-dark btn-sm mr-2 pull-right" role="button" aria-disabled="false">
 									ADD PROJECT <i class="fa fa-plus" aria-hidden="true"></i>
 								</a>
 								<a href="{{ url_for('index', populate=True) }}" class="btn btn-outline-dark btn-sm mr-2 pull-right" role="button" aria-disabled="false">
