disable removal of subprojects, update reqs

--- a/caravel/jinja_templates/index.html
+++ b/caravel/jinja_templates/index.html
@@ -95,9 +95,9 @@
 												<a href="{{ url_for('index', populate=True, path=p, sp=sp) }}" class="btn btn-outline-info btn-sm mr-0" role="button">
 													<i class="fa fa-refresh" aria-hidden="true"></i>
 												</a>
-												<a href="{{ url_for('index', remove=True, path=p, sp=sp) }}" class="btn btn-outline-danger btn-sm ml-0" role="button">
-													<i class="fa fa-trash" aria-hidden="true"></i>
-												</a>
+<!--												<a href="{{ url_for('index', remove=True, path=p, sp=sp) }}" class="btn btn-outline-danger btn-sm ml-0" role="button">-->
+<!--													<i class="fa fa-trash" aria-hidden="true"></i>-->
+<!--												</a>-->
 												<button type="submit" class="btn btn-outline-success btn-sm ml-0" name="select_project" value="{{ p }};{{ outer_loop.index }};{{ sp }}">
 													<i class="fa fa-play-circle" aria-hidden="true"></i>
 												</button>
